--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,54 +62,6 @@
     "**/templates/**/*.html": "django-html",
     "**/templates/**/*": "django-txt",
     "**/requirements{/**,*}.{txt,in}": "pip-requirements",
-    "tuple": "cpp",
-    "atomic": "cpp",
-    "cwchar": "cpp",
-    "string": "cpp",
-    "exception": "cpp",
-    "functional": "cpp",
-    "initializer_list": "cpp",
-    "iosfwd": "cpp",
-    "istream": "cpp",
-    "new": "cpp",
-    "ostream": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "type_traits": "cpp",
-    "utility": "cpp",
-    "iostream": "cpp",
-    "array": "cpp",
-    "bit": "cpp",
-    "*.tcc": "cpp",
-    "cctype": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "ctime": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "map": "cpp",
-    "unordered_map": "cpp",
-    "vector": "cpp",
-    "algorithm": "cpp",
-    "iterator": "cpp",
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "random": "cpp",
-    "string_view": "cpp",
-    "system_error": "cpp",
-    "fstream": "cpp",
-    "iomanip": "cpp",
-    "limits": "cpp",
-    "numbers": "cpp",
-    "sstream": "cpp",
-    "typeinfo": "cpp"
+    "vector": "cpp"
   }
 }
